Modify syntax and add identifier definition